--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
